implement EULA changes